test/Fail/Issue3986.err
Issue3986.agda:5.1-28: error: [OptionError]
Option --subtyping has been removed in version 2.6.3
